# ganymede

./: .gitignore  DockerFile  Dockerfile  Dockerfile.old  Dockerfile.telegram  Dockerfile.worker  LICENSE  Pipfile  README.md  api_gateway.py  converter.py  docker-dependencies.sh  ec2_server.py  example_message.txt  messages.py  package.txt  pyppeteer_test.py  pyproject.toml  requirements.txt  serverless.yml  set-webhook.sh  webhook-setup.sh
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
app/: __main__.py  bot.py  conversion_utils.py  ec2_server.py  file_utils.py  lambda.py  legacy_main.py  main.py  process_messages.py
app/util/: __init__.py  conversion_utils.py  convert.py  exceptions.py  file_utils.py  files.py  fsops.py  logging.py  progress_bars.py
chromium-renderer/: chromium-converter.py  requirements.txt
config/: railway-telegram.toml  railway-worker.toml
latex-renderer/: latex-converter.py  requirements.txt
legacy/chromium-renderer/: Dockerfile  chromium-converter.py  requirements.txt
legacy/latex-renderer/: Dockerfile
requirements/: common.txt  dev_env.txt  ec2.txt  lambda.txt
src/: conversion.py  main.py  telegram_client.py  temporal_worker.py  util.py  workflows.py
src/streamlit_webapp/: app.py
src/workflows/: conversion.py
telegram-layer/python/charset_normalizer-2.0.9.dist-info/: RECORD
telegram-layer/python/pyTelegramBotAPI-4.2.2.dist-info/: METADATA  RECORD
telegram-layer/python/requests/: utils.py
tests/: conftest.py
tests/data/: simple_test.ipynb
tests/ganymede_core/: test_conversion.py
