[tool.poetry]
name = "ipynbconverterbot"
version = "1.0.0"
description = "Dependencies for jupyter converter bot."
authors = ["Robert Dumitru <72272382+robert-dumitru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.7.1"
jupyter = "^1.0.0"
pyppeteer = "^1.0.2"
tqdm = "^4.64.1"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"
aiopg = "^1.4.0"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
