[tool.poetry]
name = "ganymede"
version = "2.0.0"
description = "Dependencies for jupyter converter bot."
authors = ["Robert Dumitru <72272382+robert-dumitru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
nbconvert = {extras = ["webpdf"], version = "^7.7.4"}
temporalio = "^1.5.0"
python-telegram-bot = {extras = ["webhooks"], version = "^20.7"}

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
